Fixed styling of press boxes on small screens

--- a/css/screen.css
+++ b/css/screen.css
@@ -73,6 +73,7 @@ section.cta {
     padding: 5px 25px 15px 25px;
     margin-right: 20px;
     height: 250px;
+    margin-bottom: 20px;
 }
 
 .menu {
